Fixed some sonar reported code style issues